# calimero-curb-chat

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_SUMMARY.md  Makefile  README.md  REFACTORING_SUMMARY.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  REFACTOR_SUMMARY.md  SECURITY.md  bounties.json  ci-local.sh  package-lock.json  permissions-testing.sh
.github/: dependabot.yml
.github/workflows/: frontend-ci.yml  integration-ci.yml  workflow-tests.yml
app/: .env.example  .gitignore  COMPONENT_RENDERING_OPTIMIZATION.md  IMPLEMENTATION_COMPLETE.md  Makefile  OPTIMIZATION_SUMMARY.md  PERFORMANCE_LAG_FIXES.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  README_OPTIMIZATIONS.md  SCROLL_FIX_SUMMARY.md  WEBSOCKET_EVENT_MAPPING.md  WEBSOCKET_OPTIMIZATIONS.md  eslint.config.js  index.html  local-cvc.sh  package.json  playwright.config.ts  pnpm-lock.yaml  vercel.json  vite.config.ts  workflow-example.yml
app/dev-dist/: sw.js
app/e2e/: auth.spec.ts  chat.spec.ts  global-setup.ts  integration.spec.ts  landing.spec.ts  rpc-admin.spec.ts  rpc-logic.spec.ts  rpc.spec.ts  sse.spec.ts  workspace.spec.ts
app/e2e-report/: index.html
app/e2e/helpers/: auth.ts  node-client.ts  rpc-client.ts
app/public/: browserconfig.xml  manifest.json
app/src/: App.tsx  index.css  main.tsx
app/src/api/: clientApi.ts  groupApi.ts  meroJsClient.ts  nodeApi.ts  types.ts
app/src/chat/: ChannelProfileSetup.tsx  ChatContainer.tsx  ChatDisplaySplit.tsx  ChatSearchOverlay.tsx  HandleDMSetup.tsx  HandleInvitation.tsx  InvitationPending.tsx  (+8 more)
docs/: CURSOR_CONTRIBUTING.md
logic/: Cargo.toml  build-bundle.sh  key.json  rust-toolchain.toml
logic-js/: README.md  build.sh  default.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
logic-js/src/: index.ts
logic/src/: constants.rs  events.rs  lib-complex.rs  lib.rs  state.rs  traits.rs
logic/src/implementations/: channel_management.rs  dm_management.rs  helpers.rs  init.rs  member_management.rs  message_management.rs  mod.rs  reaction_management.rs  tracking_management.rs  trait_impls.rs
logic/src/models/: channel.rs  dm.rs  message.rs  mod.rs  response.rs  tracking.rs
logic/src/types/: id.rs
scripts/: ci.sh  dev-invite.sh  dev-node.sh  dev-node2.sh  integration-test.sh  setup-nodes.sh  setup.sh  test-all.sh  test-self-join.sh  workflows.sh
scripts/integration/: lib.sh
workflows/: bootstrap.yml  complex-invitations.yml  dm-flow.yml  dm.yml  e2e-v2.yml  e2e.yml  file-image-workflow.yml  full-logic-test.yml  governance.yml  integration-setup.yml  logs.txt  non-admin-creates.yml  simple-invitation.yml  simple-open-invitation.yml  simple-workflow.yml
(+223 files in other folders)
