[package]
name = "curb"
description = "Calimero chat"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
borsh = "0.10.3"
borsh-derive = "0.10.3"
bs58 = "0.5.1"
calimero-sdk = { path = "../../core/crates/sdk" }
calimero-storage = { path = "../../core/crates/storage" }
calimero-storage-macros = { path = "../../core/crates/storage-macros" }
thiserror = "1.0.56"

[build-dependencies]
calimero-wasm-abi = { path = "../../core/crates/wasm-abi" }
serde_json = "1.0.113"

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

