[package]
name = "curb"
description = "Calimero chat"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
borsh = "0.10.3"
borsh-derive = "0.10.3"
bs58 = "0.5.1"
calimero-sdk = "0.10.1-rc.32"
calimero-storage = "0.10.1-rc.32"
calimero-storage-macros = "0.10.1-rc.32"
thiserror = "1.0.56"

[build-dependencies]
calimero-wasm-abi = "0.10.1-rc.32"
serde_json = "1.0.113"

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

